[package]
name = "Yellowstone"
version = "0.1.0"
edition = "2021"

[dependencies]
# SOLANA
solana-client = "2.2.1"
solana-sdk = "2.2.1"
bs58 = "0.5.1"
# GRPC
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = { version = "6.0.0", default-features = false ,features = ["plugin"] }
# UTILS
clap = { version = "4.5.32", features = ["derive"] }
config = { version = "0.15.11", features = ["yaml"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ['env-filter'] }

tokio = { version = "1.44.1", features = ["rt-multi-thread"]}
anyhow = "1.0.97"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }